--- a/khipu-ui/pom.xml
+++ b/khipu-ui/pom.xml
@@ -81,6 +81,11 @@
         	<artifactId>mysql-connector-java</artifactId>
         	<version>5.1.34</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.poi</groupId>
+        	<artifactId>poi</artifactId>
+        	<version>3.10.1</version>
+        </dependency>
         
     </dependencies>
 
