--- a/khipu-ui/pom.xml
+++ b/khipu-ui/pom.xml
@@ -71,6 +71,16 @@
         	<artifactId>jasperreports</artifactId>
         	<version>5.1.0</version>
         </dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>6.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>		
         <dependency>
         	<groupId>org.eclipse.persistence</groupId>
         	<artifactId>org.eclipse.persistence.jpa</artifactId>
@@ -85,6 +95,11 @@
         	<groupId>org.apache.poi</groupId>
         	<artifactId>poi</artifactId>
         	<version>3.10.1</version>
+        </dependency>
+        <dependency>
+        	<groupId>com.itextpdf</groupId>
+        	<artifactId>itextpdf</artifactId>
+        	<version>5.0.6</version>
         </dependency>
         
     </dependencies>
