--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 					<encoding>${project.encoding}</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+			  <groupId>org.eclipse.jetty</groupId>
+			  <artifactId>jetty-maven-plugin</artifactId>
+			  <version>9.2.8-SNAPSHOT</version>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
